--- a/COmpStore/appsettings.json
+++ b/COmpStore/appsettings.json
@@ -1,11 +1,39 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=COmpStore;Trusted_Connection=True;"
+    "COmpStore": "Server=.;Database=COmpStore;Trusted_Connection=True;"
   },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Warning",
+      "Microsoft": "Warning"
     }
+  },
+  "TokenAuthentication": {
+    "SecretKey": "secretkey_secretkey123!",
+    "Issuer": "http://localhost:60268",
+    "Audience": "http://localhost:60268",
+    "TokenPath": "/api/token",
+    "CookieName": "access_token"
   }
 }
+
+//{
+//  "ConnectionStrings": {
+//    "COmpStore": "Server=.;Database=COmpStore;Trusted_Connection=True;"
+//  },
+//  "Logging": {
+//    "IncludeScopes": false,
+//    "LogLevel": {
+//      "Default": "Debug",
+//      "System": "Information",
+//      "Microsoft": "Information"
+//    }
+//  },
+//  "JwtSecurityToken": {
+//    "Key": "YouCannotAlterTokenIfYouCannotHoldThisVeryLongKey",
+//    "Issuer": "http://logcorner.com",
+//    "Audience": "http://logcorner.com"
+//  }
+//}
